Use modern read of all bytes to a string replacing need for commons io